--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 SERVER_PORT=3000
 PGHOST=localhost
-PGUSER=adapter
-PGPASSWORD=adapter_pw
-PGDATABASE=vault
+PGUSER=manager
+PGPASSWORD=manager_pw
+PGDATABASE=management
 PGPORT=5433
