--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 - cd ..
 - git clone https://github.com/dev7788/vault-manager.git
 - cd ./vault-manager
-- PGPORT=5433 DB_NAME="management" DB_ROLE="manager" DB_PASSWORD="manager_pw" sh ./sh/manager_init.sh
+- PGPORT=5433 DB_NAME="management" DB_ROLE="manager" DB_PASSWORD="manager_pw" sh ./sh/init.sh
 
 script:
 - npm ci        # Install the npm packages
